k8s/aut-sys/apps/argocd/manifests/repo-server-age-key.patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      volumes:
        - name: age-keys
          secret:
            secretName: age-keys
      containers:
        - name: argocd-repo-server
          volumeMounts:
            - name: age-keys
              mountPath: /app/config/age-keys
