k8s/aut-sys/apps/argocd/manifests/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    haproxy-ingress.github.io/proxy-body-size: "100k"
spec:
  ingressClassName: haproxy
  tls:
    - secretName: tls-argo.aut-sys.de
      hosts: [ argo.aut-sys.de, grpc.argo.aut-sys.de ]
  rules:
    - host: argo.aut-sys.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc
spec:
  ingressClassName: haproxy
  tls:
    - secretName: tls-argo.aut-sys.de
      hosts: [ grpc.argo.aut-sys.de ]
  rules:
    - host: grpc.argo.aut-sys.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
